--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "watchit": "index.js"
   },
   "dependencies": {
-    "chokidar": "^3.3.1"
+    "chokidar": "^3.3.1",
+    "lodash.debounce": "^4.0.8"
   }
 }
